css for time label fix: padding -> margin (it covered the upper checkbox)

--- a/src/static/sass/netmetr_plugin.sass
+++ b/src/static/sass/netmetr_plugin.sass
@@ -5,8 +5,7 @@
   margin-top: 1em
   label
     display: block
-    margin-top: -100%
-    padding: 100% 2px 0 2px
+    padding: 0 2px 0 2px
     border-bottom: 2px solid #fff
   \:checked ~ label
     border-bottom: 2px solid #00a2e2
